# drone_delivery

./: CMakeLists.txt
config/: joint_names_drone.yaml
drone_delivery/: CMakeLists.txt  package.xml
drone_delivery/config/: control.yaml
drone_delivery/meshes/: base_link.STL  prop_4.STL
drone_delivery/models/box_0/: model.sdf
drone_delivery/models/box_0/meshes/: box_0.dae
drone_delivery/models/box_1/: model.config  model.sdf
drone_delivery/models/box_1/meshes/: box_1.dae
drone_delivery/models/box_4/meshes/: box_4.dae
drone_delivery/models/landing_pad/: model.config
drone_delivery/scripts/: aruco_detector.py  aruco_generator.py  path_planner.py
drone_delivery/src/: fly.cpp  pick_and_drop.cpp
drone_delivery/urdf/: drone.urdf.xacro
drone_delivery/urdf/install/: local_setup.sh  setup.ps1  setup.sh
drone_delivery/worlds/: box.world  delivery_area.world  empty_world.world
drone_plugin/src/: drone_plugin_.cpp
launch/: city.launch.py  gazebo.launch.py  spawn_robot_ros2.launch.py
meshes/: base_link.STL  prop_1.STL  prop_2.STL  prop_3.STL
models/box_0/: model.config
models/box_2/: model.config  model.sdf
models/box_2/meshes/: box_2.dae
models/box_3/: model.config  model.sdf
models/box_3/meshes/: box_3.dae
models/box_4/: model.config  model.sdf
models/landing_pad/: model.sdf
models/landing_pad/meshes/: landing_pad.dae
scripts/: aruco_generator.py
src/: fly.cpp  pick_and_drop.cpp
urdf/: drone.csv  drone.urdf  drone.urdf.xacro
urdf/install/: setup.bash  setup.zsh
urdf/log/: latest_build
worlds/: box.world  delivery_area.world  empty_world.world  simple_city.world
